tests/baselines/reference/parsingClassRecoversWhenHittingUnexpectedSemicolon(strict=true).errors.txt
parsingClassRecoversWhenHittingUnexpectedSemicolon.ts(3,13): error TS7008: Member 'm' implicitly has an 'any' type.


==== parsingClassRecoversWhenHittingUnexpectedSemicolon.ts (1 errors) ====
    class C {
        public f() { };
        private m;
                ~
!!! error TS7008: Member 'm' implicitly has an 'any' type.
    }
    